--- a/app/src/main/res/layout/sign_up_02.xml
+++ b/app/src/main/res/layout/sign_up_02.xml
@@ -188,10 +188,10 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="5"
-                android:hint="\t\이름"
-                android:maxLines="1"
+                android:hint="\t\t이름"
                 android:inputType="textPersonName"
                 android:maxLength="7"
+                android:maxLines="1"
                 android:textAlignment="textStart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -210,10 +210,10 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:layout_weight="5"
-                android:hint="\t\생년월일"
-                android:maxLines="1"
+                android:hint="\t\t생년월일"
                 android:inputType="date"
                 android:maxLength="8"
+                android:maxLines="1"
                 android:textAlignment="textStart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
