--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -47,7 +47,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ciclImageButton
         android:id="@+id/my_info_profile"
         android:layout_width="120dp"
         android:layout_height="120dp"
