--- a/app/src/main/res/layout/home_02.xml
+++ b/app/src/main/res/layout/home_02.xml
@@ -167,6 +167,19 @@
             app:layout_constraintBottom_toTopOf="@+id/down_line"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include" />
+
+        <include
+            android:id="@+id/include"
+            layout="@layout/home_02_re_01"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/up_line" />
 
     </android.support.constraint.ConstraintLayout>
