--- a/app/src/main/res/layout/home_02_re_02.xml
+++ b/app/src/main/res/layout/home_02_re_02.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:id="@+id/home_02_cardview"
+    android:layout_width="120dp"
+    android:layout_height="200dp">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,10 +12,11 @@
         <ImageView
             android:id="@+id/home_02_re_book_I"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
+            android:maxHeight="210dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +56,7 @@
             android:layout_marginBottom="10dp"
             android:maxLines="1"
             android:text="2018.11.16"
-            android:textAlignment="center"
+            android:textAlignment="viewEnd"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView24"
