--- a/app/src/main/res/layout/home_02_re_02.xml
+++ b/app/src/main/res/layout/home_02_re_02.xml
@@ -1,82 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_02_cardview"
-    android:layout_width="120dp"
-    android:layout_height="200dp">
+    android:layout_width="wrap_content"
+    android:layout_height="230dp"
+    android:layout_marginEnd="1dp"
+    android:layout_marginBottom="1dp"
+    app:cardCornerRadius="5dp"
+    app:cardElevation="7dp">
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/home_02_re_book_I"
-            android:layout_width="wrap_content"
-            android:layout_height="120dp"
-            android:layout_marginStart="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="5"
             android:maxHeight="210dp"
+            app:layout_constraintBottom_toTopOf="@+id/home_02_re_book_name_T"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.050000012"
             app:srcCompat="@drawable/book_01" />
 
-        <TextView
-            android:id="@+id/home_02_re_book_name_T"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:maxLines="1"
-            android:text="골든아워 1"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
-            app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
-            app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_I" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/home_02_re_book_author_T"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:maxLines="1"
-            android:text="이국종"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
-            app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
-            app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_name_T" />
+            <TextView
+                android:id="@+id/home_02_re_book_name_T"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="골든아워 1"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/home_02_re_book_author_T"
+                app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
+                app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
 
-        <TextView
-            android:id="@+id/home_02_re_book_finish_T"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="10dp"
-            android:maxLines="1"
-            android:text="2018.11.16"
-            android:textAlignment="viewEnd"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView24"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
-            app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_author_T"
-            app:layout_constraintVertical_bias="0.0" />
+            <TextView
+                android:id="@+id/home_02_re_book_author_T"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginBottom="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="이국종"
+                android:textAlignment="center"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toTopOf="@+id/textView24"
+                app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
+                app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
 
-        <TextView
-            android:id="@+id/textView24"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:maxLines="1"
-            android:text="완독"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
-            app:layout_constraintStart_toEndOf="@+id/home_02_re_book_finish_T"
-            app:layout_constraintTop_toTopOf="@+id/home_02_re_book_finish_T" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-    </android.support.constraint.ConstraintLayout>
+                <TextView
+                    android:id="@+id/home_02_re_book_finish_T"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="clip_vertical"
+                    android:layout_weight="2"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:text="2018.11.16"
+                    android:textAlignment="center"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/textView24"
+                    app:layout_constraintEnd_toStartOf="@+id/textView24"
+                    app:layout_constraintHorizontal_chainStyle="spread"
+                    app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
+                    app:layout_constraintTop_toTopOf="@+id/textView24" />
+
+                <TextView
+                    android:id="@+id/textView24"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="clip_vertical"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="완독"
+                    android:textAlignment="center"
+                    android:textSize="10sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
+                    app:layout_constraintStart_toEndOf="@+id/home_02_re_book_finish_T" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
 </android.support.v7.widget.CardView>
