--- a/app/src/main/res/layout/home_05_re.xml
+++ b/app/src/main/res/layout/home_05_re.xml
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:text="이국종"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@+id/heart_price"
             app:layout_constraintStart_toStartOf="@+id/heart_name"
             app:layout_constraintTop_toBottomOf="@+id/heart_name" />
@@ -61,15 +61,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="15,800원"
-            app:layout_constraintBottom_toTopOf="@+id/heart_date"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/heart_star"
             app:layout_constraintStart_toStartOf="@+id/heart_name"
             app:layout_constraintTop_toBottomOf="@+id/heart_author" />
 
-        <TextView
-            android:id="@+id/heart_date"
+        <RatingBar
+            android:id="@+id/heart_star"
+            style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2018.10"
+            android:isIndicator="false"
+            android:max="6"
+            android:numStars="5"
+            android:progressTint="@color/mybrary_main"
+            android:stepSize="0.5"
             app:layout_constraintBottom_toBottomOf="@+id/heart_book"
             app:layout_constraintStart_toStartOf="@+id/heart_name"
             app:layout_constraintTop_toBottomOf="@+id/heart_price" />
