--- a/app/src/main/res/layout/home_00_my_info_02.xml
+++ b/app/src/main/res/layout/home_00_my_info_02.xml
@@ -24,13 +24,14 @@
         android:id="@+id/textView19"
         android:layout_width="0dp"
         android:layout_height="35dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="15dp"
         android:layout_weight="7"
         android:background="@null"
         android:gravity="center_vertical"
-        android:text="  좋아하는 책 장르 변경"
+        android:text="좋아하는 책 장르 변경"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/my_info_02_back_B"
         app:layout_constraintTop_toTopOf="parent" />
