--- a/app/src/main/res/layout/home_02_re_01.xml
+++ b/app/src/main/res/layout/home_02_re_01.xml
@@ -18,6 +18,7 @@
 
         <ImageView
             android:id="@+id/home_02_re_fropile_I"
+            android:clickable="true"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:scaleType="fitCenter"
