--- a/app/src/main/res/layout/home_02_re_02.xml
+++ b/app/src/main/res/layout/home_02_re_02.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_02_cardview"
     android:layout_width="wrap_content"
-    android:layout_height="230dp"
+    android:layout_height="220dp"
     android:layout_marginEnd="1dp"
     android:layout_marginBottom="1dp"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="7dp">
+    app:cardElevation="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +41,6 @@
                 android:id="@+id/home_02_re_book_name_T"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:maxLines="1"
@@ -59,56 +56,27 @@
                 android:id="@+id/home_02_re_book_author_T"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginBottom="5dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:maxLines="1"
                 android:text="이국종"
                 android:textAlignment="center"
                 android:textSize="10sp"
-                app:layout_constraintBottom_toTopOf="@+id/textView24"
                 app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
                 app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/home_02_re_book_finish_T"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:text="18년 11월 28일 12시 12분"
+                android:textAlignment="center"
+                android:textSize="8sp"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
 
-                <TextView
-                    android:id="@+id/home_02_re_book_finish_T"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="clip_vertical"
-                    android:layout_weight="2"
-                    android:gravity="center"
-                    android:maxLines="1"
-                    android:text="2018.11.16"
-                    android:textAlignment="center"
-                    android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/textView24"
-                    app:layout_constraintEnd_toStartOf="@+id/textView24"
-                    app:layout_constraintHorizontal_chainStyle="spread"
-                    app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
-                    app:layout_constraintTop_toTopOf="@+id/textView24" />
-
-                <TextView
-                    android:id="@+id/textView24"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="clip_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="완독"
-                    android:textAlignment="center"
-                    android:textSize="10sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
-                    app:layout_constraintStart_toEndOf="@+id/home_02_re_book_finish_T" />
-
-            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
