--- a/app/src/main/res/layout/home_02_re_02.xml
+++ b/app/src/main/res/layout/home_02_re_02.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/home_02_cardview"
-    android:layout_width="wrap_content"
-    android:layout_height="220dp"
+    android:layout_width="match_parent"
+    android:layout_height="230dp"
     android:layout_marginEnd="1dp"
     android:layout_marginBottom="1dp"
     app:cardElevation="5dp">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/home_02_re_book_I"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_width="100dp"
+            android:layout_height="130dp"
             android:layout_gravity="center"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="5"
             android:maxHeight="210dp"
@@ -29,56 +30,58 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.050000012"
-            app:srcCompat="@drawable/book_01" />
+            app:layout_constraintVertical_chainStyle="spread"
+            app:srcCompat="@drawable/home_02_default" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="3"
-            android:orientation="vertical">
+        <TextView
+            android:id="@+id/home_02_re_book_author_T"
+            android:layout_width="0dp"
+            android:layout_height="18dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="이국종"
+            android:textAlignment="center"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toTopOf="@+id/home_02_re_book_finish_T"
+            app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
+            app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_name_T" />
 
-            <TextView
-                android:id="@+id/home_02_re_book_name_T"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="골든아워 1"
-                android:textAlignment="center"
-                android:textSize="12sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/home_02_re_book_author_T"
-                app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
-                app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
+        <TextView
+            android:id="@+id/home_02_re_book_name_T"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="골든아워 1"
+            android:textAlignment="center"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/home_02_re_book_author_T"
+            app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
+            app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_I" />
 
-            <TextView
-                android:id="@+id/home_02_re_book_author_T"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:maxLines="1"
-                android:text="이국종"
-                android:textAlignment="center"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
-                app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
+        <TextView
+            android:id="@+id/home_02_re_book_finish_T"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="18년 11월 28일 12시 12분"
+            android:textAlignment="center"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/home_02_re_book_I"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I"
+            app:layout_constraintTop_toBottomOf="@+id/home_02_re_book_author_T" />
 
-            <TextView
-                android:id="@+id/home_02_re_book_finish_T"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="18년 11월 28일 12시 12분"
-                android:textAlignment="center"
-                android:textSize="8sp"
-                app:layout_constraintHorizontal_chainStyle="spread"
-                app:layout_constraintStart_toStartOf="@+id/home_02_re_book_I" />
-
-        </LinearLayout>
-
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
