--- a/app/src/main/res/layout/home_02.xml
+++ b/app/src/main/res/layout/home_02.xml
@@ -8,19 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
 
-        android:id="@+id/home_drawer_01"
-        android:layout_width="215dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@color/white">
-
-        <include
-            layout="@layout/home_drawer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </RelativeLayout>
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -29,7 +17,7 @@
         android:layout_height="match_parent">
 
         <ImageButton
-            android:id="@+id/home_menu_00_B"
+            android:id="@+id/home_menu_02_B"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginTop="5dp"
@@ -44,23 +32,23 @@
             tools:srcCompat="@drawable/menu_00" />
 
         <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
+            android:id="@+id/home_02_nick_title"
+            android:layout_width="0dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
             android:layout_weight="5"
-            android:gravity="center"
+            android:gravity="center_vertical|start"
             android:text="MyBrary"
-            android:textAlignment="center"
+            android:maxLines="1"
             android:textColor="@color/mybrary_main"
             android:textSize="18sp"
             android:textStyle="bold"
             android:typeface="serif"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
-            app:layout_constraintStart_toEndOf="@+id/search_back_B"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/home_02_search"
+            app:layout_constraintStart_toEndOf="@+id/home_menu_02_B"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
@@ -200,6 +188,20 @@
 
 
     <!--드로어레이아웃-->
+
+    <RelativeLayout
+
+        android:id="@+id/home_drawer_02"
+        android:layout_width="215dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
+
+        <include
+            layout="@layout/home_drawer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
 
 </android.support.v4.widget.DrawerLayout>
