--- a/app/src/main/res/layout/home_02_re_01.xml
+++ b/app/src/main/res/layout/home_02_re_01.xml
@@ -16,19 +16,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
+        <!--<ImageView-->
+            <!--android:id="@+id/home_02_re_fropile_I"-->
+            <!--android:clickable="true"-->
+            <!--android:layout_width="100dp"-->
+            <!--android:layout_height="100dp"-->
+            <!--android:scaleType="fitCenter"-->
+            <!--app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--app:layout_constraintEnd_toEndOf="parent"-->
+            <!--app:layout_constraintHorizontal_bias="0.05"-->
+            <!--app:layout_constraintStart_toStartOf="parent"-->
+            <!--app:layout_constraintTop_toTopOf="parent"-->
+            <!--app:layout_constraintVertical_bias="0.050000012"-->
+            <!--app:srcCompat="@drawable/user_profile" />-->
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/home_02_re_fropile_I"
-            android:clickable="true"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="fitCenter"
+            android:src="@drawable/user_profile"
+            app:civ_border_color="@color/default1"
+            app:civ_border_width="1.5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.050000012"
-            app:srcCompat="@drawable/user_profile" />
+            app:layout_constraintVertical_bias="0.05" />
 
         <Button
             android:id="@+id/home_02_mini_1_B"
@@ -124,10 +139,10 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/all_stroke"
             android:minHeight="30dp"
-            android:text="MyBrary 꾸미기"
+            android:text="MyBrary 서재 등록"
             app:layout_constraintBottom_toTopOf="@+id/home_02_re_screen_T"
             app:layout_constraintEnd_toEndOf="@+id/home_02_mini_3_B"
-            app:layout_constraintStart_toStartOf="@+id/home_02_mini_1_B"
+            app:layout_constraintStart_toEndOf="@+id/home_02_re_fropile_I"
             app:layout_constraintTop_toBottomOf="@+id/home_02_mini_2_B" />
 
         <TextView
