--- a/app/src/main/res/layout/home_drawer.xml
+++ b/app/src/main/res/layout/home_drawer.xml
@@ -128,7 +128,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:background="@color/trans"
-            android:text="설정"
+            android:text="도움말"
             app:layout_constraintBottom_toTopOf="@+id/guideline13"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
