--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -48,21 +48,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/my_info_profile"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:layout_marginTop="30dp"
         android:background="@color/trans"
+        android:src="@drawable/user_profile"
         app:civ_border_color="@color/trans"
         app:civ_border_width="3dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25"
-        android:src="@drawable/user_profile" />
-
+        app:layout_constraintTop_toBottomOf="@+id/view" />
 
 
     <View
@@ -77,15 +74,13 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="8dp"
         android:gravity="end|center_vertical"
         android:text="닉네임 :"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/center_line"
-        app:layout_constraintStart_toStartOf="@+id/textView14"
+        app:layout_constraintStart_toEndOf="@+id/my_info_back_B"
         app:layout_constraintTop_toBottomOf="@+id/view5"
-        app:layout_constraintVertical_bias="0.244"
         app:layout_constraintVertical_chainStyle="spread" />
 
     <TextView
@@ -96,7 +91,7 @@
         android:layout_marginEnd="5dp"
         android:gravity="center_vertical"
         android:maxLines="1"
-        android:text="골아파덕"
+        android:text="없음"
         app:layout_constraintBottom_toBottomOf="@+id/textView17"
         app:layout_constraintEnd_toEndOf="@+id/textView14"
         app:layout_constraintStart_toStartOf="@+id/center_line"
@@ -107,16 +102,14 @@
         android:id="@+id/textView23"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="8dp"
         android:gravity="end|center_vertical"
         android:text="좋아하는 책 장르 :"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/center_line"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/view5"
+        app:layout_constraintStart_toStartOf="@+id/textView17"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
         app:layout_constraintVertical_chainStyle="spread" />
 
     <TextView
@@ -125,13 +118,11 @@
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="5dp"
-        android:layout_marginBottom="8dp"
         android:gravity="start|center_vertical"
-        android:text="IT 서적"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="없음"
         app:layout_constraintEnd_toEndOf="@+id/textView14"
         app:layout_constraintStart_toStartOf="@+id/center_line"
-        app:layout_constraintTop_toBottomOf="@+id/view5"
+        app:layout_constraintTop_toTopOf="@+id/textView23"
         app:layout_constraintVertical_chainStyle="spread" />
 
     <android.support.constraint.Guideline
@@ -139,46 +130,97 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_begin="192dp" />
+        app:layout_constraintGuide_percent="0.5" />
 
     <Button
         android:id="@+id/my_info_profile_B"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/all_stroke"
+        android:minHeight="35dp"
         android:padding="5dp"
         android:text="프로필 사진 수정"
-        app:layout_constraintBottom_toBottomOf="@+id/my_info_nick_B"
-        app:layout_constraintEnd_toStartOf="@+id/my_info_nick_B"
+        app:layout_constraintBottom_toTopOf="@+id/my_info_nick_B"
+        app:layout_constraintEnd_toStartOf="@+id/my_info_talk_B"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/my_info_nick_B" />
+        app:layout_constraintStart_toStartOf="@+id/textView17" />
+
+    <Button
+        android:id="@+id/my_info_talk_B"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:background="@drawable/all_stroke"
+        android:minHeight="35dp"
+        android:padding="5dp"
+        android:text="대화명 수정"
+        app:layout_constraintBottom_toBottomOf="@+id/my_info_profile_B"
+        app:layout_constraintEnd_toEndOf="@+id/textView14"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/my_info_profile_B" />
 
     <Button
         android:id="@+id/my_info_nick_B"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/all_stroke"
+        android:minHeight="35dp"
         android:padding="5dp"
         android:text="닉네임 수정"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/my_info_genre_B"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/my_info_profile_B"
-        app:layout_constraintTop_toBottomOf="@+id/textView23"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintStart_toStartOf="@+id/textView17" />
 
     <Button
         android:id="@+id/my_info_genre_B"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:background="@drawable/all_stroke"
+        android:minHeight="35dp"
         android:padding="5dp"
-        android:text="좋아하는 책 장르 수정"
+        android:text="책 장르 수정"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/my_info_nick_B"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/home_00_my_info_nick"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/my_info_nick_B"
-        app:layout_constraintTop_toTopOf="@+id/my_info_nick_B" />
+        app:layout_constraintTop_toTopOf="@+id/my_info_nick_B"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="5dp"
+        android:gravity="center_vertical|start"
+        android:text="대화명 : "
+        app:layout_constraintEnd_toStartOf="@+id/center_line"
+        app:layout_constraintStart_toStartOf="@+id/textView17"
+        app:layout_constraintTop_toBottomOf="@+id/textView23" />
+
+    <TextView
+        android:id="@+id/home_00_my_info_talk"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_vertical|start"
+        android:text="없음\n\n\n\n"
+        android:maxLines="3"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/my_info_talk_B"
+        app:layout_constraintEnd_toEndOf="@+id/textView14"
+        app:layout_constraintStart_toStartOf="@+id/textView17"
+        app:layout_constraintTop_toBottomOf="@+id/textView24" />
+
 
 </android.support.constraint.ConstraintLayout>
