--- a/app/src/main/res/layout/sign_in_02.xml
+++ b/app/src/main/res/layout/sign_in_02.xml
@@ -121,7 +121,7 @@
         android:layout_marginTop="5dp"
         android:hint="아이디 입력"
         android:inputType="text"
-        android:maxLength="15"
+        android:maxLength="30"
         android:maxLines="1"
         android:privateImeOptions="defaultInputmode=english"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -178,7 +178,7 @@
 
     <ImageView
         android:id="@+id/sign_in_02_face_B"
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/sign_in_02_google_B"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_google_B"
@@ -200,13 +200,13 @@
         app:layout_constraintStart_toStartOf="@+id/sign_in_02_face_B"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_02_face_B" />
 
-    <ImageView
+    <com.google.android.gms.common.internal.SignInButtonImpl
         android:id="@+id/sign_in_02_google_B"
-        android:layout_width="0dp"
+        android:layout_width="55dp"
         android:layout_height="0dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
-        android:clickable="true"
+        android:background="@drawable/login_google"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/sign_in_02_twitter_B"
         app:layout_constraintHorizontal_bias="0.5"
@@ -230,7 +230,7 @@
 
     <ImageView
         android:id="@+id/sign_in_02_twitter_B"
-        android:layout_width="0dp"
+        android:layout_width="50dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/sign_in_02_google_B"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
@@ -264,6 +264,6 @@
         app:layout_constraintBottom_toTopOf="@+id/textView48"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintTop_toBottomOf="@+id/sign_in_02_password" />
 
 </android.support.constraint.ConstraintLayout>
