--- a/app/src/main/res/layout/home_00_my_info.xml
+++ b/app/src/main/res/layout/home_00_my_info.xml
@@ -73,13 +73,13 @@
         android:id="@+id/textView17"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
         android:gravity="end|center_vertical"
         android:text="닉네임 :"
         app:layout_constraintEnd_toStartOf="@+id/center_line"
-        app:layout_constraintStart_toEndOf="@+id/my_info_back_B"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view5"
         app:layout_constraintVertical_chainStyle="spread" />
 
@@ -88,7 +88,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginEnd="15dp"
         android:gravity="center_vertical"
         android:maxLines="1"
         android:text="없음"
@@ -117,10 +117,9 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="5dp"
         android:gravity="start|center_vertical"
         android:text="없음"
-        app:layout_constraintEnd_toEndOf="@+id/textView14"
+        app:layout_constraintEnd_toEndOf="@+id/home_00_my_info_nick"
         app:layout_constraintStart_toStartOf="@+id/center_line"
         app:layout_constraintTop_toTopOf="@+id/textView23"
         app:layout_constraintVertical_chainStyle="spread" />
@@ -152,13 +151,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginEnd="5dp"
         android:background="@drawable/all_stroke"
         android:minHeight="35dp"
         android:padding="5dp"
         android:text="대화명 수정"
         app:layout_constraintBottom_toBottomOf="@+id/my_info_profile_B"
-        app:layout_constraintEnd_toEndOf="@+id/textView14"
+        app:layout_constraintEnd_toEndOf="@+id/home_00_my_info_nick"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/my_info_profile_B" />
 
@@ -211,14 +209,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
         android:gravity="center_vertical|start"
-        android:text="없음\n\n\n\n"
         android:maxLines="3"
+        android:text="없음\n\n\n\n"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/my_info_talk_B"
-        app:layout_constraintEnd_toEndOf="@+id/textView14"
+        app:layout_constraintEnd_toEndOf="@+id/home_00_my_info_nick"
         app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
 
