--- a/app/src/main/res/layout/home_02_02.xml
+++ b/app/src/main/res/layout/home_02_02.xml
@@ -57,6 +57,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/wright_user_profile"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view18"
+        android:src ="@mipmap/ic_launcher_round" />
+
+    <TextView
+        android:id="@+id/wright_user_nick"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:text="닉네임"
+        android:textColor="@color/mybrary_main"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@+id/wright_user_profile"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/wright_user_profile"
+        app:layout_constraintTop_toTopOf="@+id/wright_user_profile" />
+
+    <View
+        android:id="@+id/view15"
+        android:layout_width="0dp"
+        android:layout_height="0.5dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:background="@android:color/darker_gray"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wright_user_nick" />
+
     <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -64,7 +101,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view18">
+        app:layout_constraintTop_toBottomOf="@+id/view15">
 
         <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -170,13 +207,13 @@
 
             <Button
                 android:id="@+id/home_02_02_remove_B"
-                android:background="@drawable/all_stroke"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="30dp"
+                android:background="@drawable/all_stroke"
                 android:text="삭제하기"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/guideline24"
